--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-table": "^7.5.0"
+    "react-table-v6": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
